<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_of_service"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:hint="@string/cost_of_service"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/service_question"
        app:layout_constraintBottom_toBottomOf="@id/service_question" />

    <TextView
        android:layout_width="wrap_content"
        style="@style/Widget.TipCalculator.TextView"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        android:id="@+id/service_question"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/cost_of_service"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"
        />

    <RadioGroup
        android:id="@+id/tip_options"
        android:checkedButton="@id/tip_twenty_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/service_question"
        app:layout_constraintStart_toStartOf="@id/service_question">

<!--        add radio buttons-->
        <RadioButton
            android:id="@+id/tip_twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text ="@string/amazing_20"/>

        <RadioButton
            android:id="@+id/tip_eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text ="@string/good_18"/>

        <RadioButton
            android:id="@+id/tip_fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text ="@string/ok_15"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/icon_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
        app:layout_constraintEnd_toStartOf="@+id/round_up_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_up_switch"
        app:srcCompat="@drawable/ic_round_up" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Round up tip?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_round_up"/>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/round_up_switch"/>

    <TextView
        android:id="@+id/tip_result"
        style="@style/Widget.TipCalculator.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        tools:text="Tip Amount: $10"
        android:layout_marginTop="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout> </ScrollView>